Build main calculator functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div id="buttonContainer">
             <div class="row">
-                <button id="clear" onClick="keyPress('clear')">Clear</button>
+                <button id="clear" onClick="keyPress('clear')">AC</button>
             </div>
             <div class="row" id="row 1">
                 <button class="keypad" id="7" onClick="keyPress('7')">7</button>
